--- a/settings.ini
+++ b/settings.ini
@@ -3,3 +3,10 @@ host = "localhost"
 name = "sweet_shop"
 user = "root"
 pass = ""
+
+[route]
+search = "http://localhost/tp_w/database/getshoes.php"
+connexion = "http://localhost/tp_w/views/pages/connexion.php"
+hommes = "http://localhost/tp_w/views/pages/hommes.php"
+femmes = "http://localhost/tp_w/views/pages/femmes.php"
+enfants = "http://localhost/tp_w/views/pages/enfants.php"
